# libm_s7

./: .bazelrc  BUILD.bazel  BUILD.bzl  MODULE.bazel  README.md
lib/: BUILD.bazel
lib/clibgen/: BUILD.bazel
src/: BUILD.bazel
src/clibgen/: BUILD.bazel
test/: BUILD.bazel  MODULE.bazel  libm_test.c
