package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_shared_library")
load("@libs7//plugin:MACROS.bzl", "s7_plugin", "s7_library")
load("@obazl_tools_cc//config:BASE.bzl",
     "BASE_COPTS", "DSO_EXT", "DYNLINK_OPTS",
     _define_module_version = "define_module_version")

INCLUDE_PATHS = []
COPTS = BASE_COPTS + [
    "-Wno-unused-parameter",
    # "-I$(@)/src"
]

################################################################
s7_plugin(
    name  = "m_s7",
    # alwayslink = True, # ensure init fn sym available for dlsym
    srcs  = ["//lib/clibgen:libm_s7.c"],
    copts = COPTS,
    # linkopts = select({
    #     "@platforms//os:linux": ["-lrt"],
    #     "//conditions:default": []
    # }),
)

## FIXME: use s7_shared_library macro
cc_shared_library(
    name  = "m_s7_dso",  # create libm_s7.{dylib,so}
    shared_lib_name = select({
        "@platforms//os:macos": "libm_s7.dylib",
        "@platforms//os:linux": "libm_s7.so",
        # "@platforms//os:windows": "libm_s7.dll",
        "//conditions:default": "libm_s7.so"
    }),
    deps = [":m_s7"]
)
